--- a/scss/main.css
+++ b/scss/main.css
@@ -1,10 +1,37 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Bacasime+Antique&family=Fasthand&family=Kaushan+Script&family=Lumanosimo&family=Pompiere&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,600;1,700&family=Roboto:ital,wght@0,300;0,400;0,500;1,100;1,300;1,400&family=Satisfy&display=swap");
+@keyframes typing {
+  from {
+    width: 0;
+  }
+}
+@keyframes blink {
+  50% {
+    border-color: transparent;
+  }
+}
+.info__section-sn {
+  background-color: rgb(34, 31, 31);
+}
+
+.info__section-sg {
+  background-color: rgb(43, 43, 43);
+}
+
+.t-3 {
+  width: 30%;
+}
+
+.t-4 {
+  width: 40%;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  text-decoration: none;
   list-style-type: none;
+  text-decoration: none;
 }
 
 body {
@@ -41,6 +68,7 @@ h3 {
   align-items: center;
   min-height: 100px 0;
   padding: 100px 0;
+  align-items: baseline;
 }
 .header .menu {
   position: absolute;
@@ -52,21 +80,29 @@ h3 {
   justify-content: space-between;
 }
 .header .menu .logo {
+  padding: 20px 20px 0px 0px;
   color: #2b2a2a;
   font-size: 25px;
   font-weight: 800;
   text-transform: uppercase;
+  text-decoration: none;
+  transition: 0.5s;
+}
+.header .menu .logo:hover {
+  transform: scale(1.2);
 }
 .header .menu .navbar ul li {
   position: relative;
   float: left;
+  padding-left: 20px;
 }
-.header .menu .navbar ul li a {
-  font-size: 16px;
-  padding: 20px;
+.header .menu .navbar a {
+  font-size: 20px;
+  padding: 20px 30px 0px 0px;
   color: #2b2a2a;
   display: block;
   font-weight: 600;
+  text-decoration: none;
 }
 .header .menu #menu {
   display: none;
@@ -82,6 +118,7 @@ h3 {
 
 .submenu {
   position: relative;
+  margin-top: 25px;
 }
 .submenu #carrito {
   display: none;
@@ -166,66 +203,21 @@ h3 {
   margin-bottom: 0;
 }
 
-.oferts {
-  padding: 100px 0;
+.h2-index {
   display: flex;
-  justify-content: space-between;
-}
-.oferts .ofert-1 {
-  text-align: center;
-  flex-basis: calc(25% - 20px);
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-  padding: 35px;
-}
-.oferts .ofert-1 .ofert-1 img {
-  width: 140px;
-  margin-bottom: 10px;
-}
-.oferts .ofert-1 p {
-  font-size: px;
-  margin: 0;
-  font-weight: 600;
-  color: #181713;
+  justify-content: center;
+  margin-top: 80px;
+  font-size: 30px;
 }
 
-.products {
-  padding: 0 0 100px 0;
-  text-align: center;
-}
-.products h2 {
-  font-size: 40px;
-  color: #181713;
-  text-transform: capitalize;
-  margin-bottom: 55px;
-}
-.products .product {
+.oferts--index .ofert-1--index {
+  width: 100%;
   text-align: center;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   padding: 35px;
 }
-.products .product img {
-  width: 150px;
-  height: 150px;
-  margin-bottom: 10PX;
-  transition: 0.5s;
-}
-.products .product img:hover {
-  transform: scale(1.5);
-}
-.products .product h3 {
-  color: #2b2a2a;
-}
-.products .product p {
-  font-size: 15px;
-  margin: 0;
-  color: #181713;
-  font-weight: 600;
-}
-
-.product-content {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 50px;
+.oferts--index .ofert-1--index img {
+  width: 200px;
 }
 
 .span-service p {
@@ -283,6 +275,102 @@ h3 {
   border: 2px solid black;
 }
 
+.main-diseños {
+  margin: 0;
+  background-color: #181713;
+}
+.main-diseños h2 {
+  padding-top: 40px;
+  display: flex;
+  justify-content: center;
+  font-size: 30px;
+  color: #FFFFFF;
+  text-transform: capitalize;
+  font-weight: 600;
+}
+.main-diseños .row {
+  margin-inline: 40px;
+  display: flex;
+  padding: 5px;
+  flex-wrap: wrap;
+  padding-bottom: 50px;
+}
+.main-diseños .row .column {
+  flex: 25%;
+  padding: 5px;
+}
+.main-diseños .row .column img {
+  width: 100%;
+  margin-top: 5px;
+}
+
+.oferts, .oferts--index {
+  padding: 100px 0;
+  display: flex;
+  justify-content: space-between;
+}
+.oferts .ofert-1, .oferts--index .ofert-1 {
+  text-align: center;
+  flex-basis: calc(25% - 20px);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  padding: 35px;
+}
+.oferts .ofert-1 .ofert-1 img, .oferts--index .ofert-1 .ofert-1 img {
+  width: 140px;
+  margin-bottom: 10px;
+}
+.oferts .ofert-1 p, .oferts--index .ofert-1 p {
+  font-size: px;
+  margin: 0;
+  font-weight: 600;
+  color: #181713;
+}
+
+.products {
+  padding: 0 0 100px 0;
+  text-align: center;
+}
+.products .h2-botton {
+  margin-top: 100px;
+}
+.products .h2-top {
+  margin-bottom: 100px;
+}
+.products h2 {
+  font-size: 40px;
+  color: #181713;
+  text-transform: capitalize;
+}
+.products .product {
+  text-align: center;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  padding: 35px;
+}
+.products .product img {
+  width: 150px;
+  height: 150px;
+  margin-bottom: 10PX;
+  transition: 0.5s;
+}
+.products .product img:hover {
+  transform: scale(1.5);
+}
+.products .product h3 {
+  color: #2b2a2a;
+}
+.products .product p {
+  font-size: 15px;
+  margin: 0;
+  color: #181713;
+  font-weight: 600;
+}
+
+.product-content {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 50px;
+}
+
 .contact {
   padding-bottom: 100px;
   display: flex;
@@ -301,6 +389,60 @@ h3 {
   margin-left: 10px;
   color: #FFFFFF;
   background-color: #2b2a2a;
+}
+
+.main-contact {
+  border: 3px solid black;
+  padding: 10px;
+  padding-block: 35px;
+  display: flex;
+  background-color: #2b2a2a;
+}
+.main-contact .contact-container {
+  padding-bottom: 10px;
+  width: 50%;
+  border-right: 1px solid #FFFFFF;
+}
+.main-contact .contact-container .div-contact {
+  padding-bottom: 10px;
+  margin: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-bottom: 1px solid black;
+}
+.main-contact .contact-container .div-contact i {
+  font-size: 20px;
+  color: rgba(210, 210, 210, 0.8509803922);
+}
+.main-contact .contact-container .div-contact p {
+  font-size: 20px;
+  color: rgba(210, 210, 210, 0.8509803922);
+}
+.main-contact .contact-container .div-contact h2 {
+  color: rgba(210, 210, 210, 0.8509803922);
+}
+.main-contact .contact-container form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.main-contact .contact-container form input {
+  background-color: #2b2a2a;
+  width: auto;
+  margin: 74px;
+  padding: 17px 120px 17px 5px;
+  border: none;
+  color: #FFFFFF;
+  font-weight: 800;
+  border-bottom: 3px solid #FFFFFF;
+}
+.main-contact .contact-container form .btn-3 {
+  border: none;
+  border-radius: 20px;
+  padding-inline: 30px;
+  color: #2b2a2a;
+  background-image: linear-gradient(#f8b2b2, #f4a1ed, #834ed7);
 }
 
 .footer {
@@ -324,6 +466,12 @@ h3 {
   margin-bottom: 10px;
 }
 
+@media (max-width: 1570px) {
+  .gh12 {
+    grid-column-start: -3;
+    grid-column-end: -1;
+  }
+}
 @media (max-width: 991px) {
   .header .menu .navbar ul li a {
     color: #FFFFFF;
@@ -348,6 +496,9 @@ h3 {
   .logo {
     display: none;
   }
+  .LC {
+    display: inline;
+  }
   #menu:checked ~ .navbar {
     display: initial;
   }
@@ -371,14 +522,14 @@ h3 {
   .informacion {
     display: none;
   }
-  .oferts {
+  .oferts, .oferts--index {
     padding: 30px;
     flex-direction: column;
   }
-  .oferts .ofert-1 {
+  .oferts .ofert-1, .oferts--index .ofert-1 {
     margin-bottom: 25px;
   }
-  .oferts .ofert-1 img {
+  .oferts .ofert-1 img, .oferts--index .ofert-1 img {
     width: 200px;
   }
   .products {
@@ -390,6 +541,9 @@ h3 {
   .service {
     flex-direction: column;
   }
+  .main-diseños .grid-container .grid-item {
+    padding: 0;
+  }
 }
 @media (max-width: 700px) {
   .h2-service {
@@ -398,6 +552,14 @@ h3 {
   .span-service p {
     font-size: 15px;
   }
+  .main-contact {
+    display: flex;
+    flex-direction: column;
+  }
+  .main-contact .contact-container {
+    width: 100%;
+    border-right: none;
+  }
 }
 @media (max-width: 550px) {
   .link ul {
@@ -405,6 +567,12 @@ h3 {
   }
   .link li a i {
     font-size: 25px;
+  }
+  .main-diseños .grid-container {
+    display: flex;
+  }
+  .row {
+    flex-direction: column;
   }
 }
 @media (max-width: 435px) {
@@ -428,5 +596,119 @@ h3 {
   }
   .contact form input {
     margin-bottom: 10px;
+  }
+  .main-contact {
+    display: flex;
+    flex-direction: column;
+  }
+  .main-contact .contact-container {
+    width: 100%;
+  }
+  .main-contact .contact-container .div-contact {
+    margin: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-bottom: 1px solid black;
+  }
+  .main-contact .contact-container .div-contact i {
+    font-size: 15px;
+    color: rgba(210, 210, 210, 0.8509803922);
+  }
+  .main-contact .contact-container .div-contact p {
+    font-size: 14px;
+    color: rgba(210, 210, 210, 0.8509803922);
+  }
+  .main-contact .contact-container .div-contact h2 {
+    color: rgba(210, 210, 210, 0.8509803922);
+  }
+  .main-contact .contact-container form input {
+    margin-block: 15px;
+    padding: 17px 80px 17px 5px;
+  }
+}
+.section-1 {
+  width: 10%;
+}
+
+.section-2 {
+  width: 20%;
+}
+
+.section-3 {
+  width: 30%;
+}
+
+.info__main {
+  border: 1px solid white;
+  background-color: #181713;
+}
+.info__main section {
+  display: flex;
+}
+.info__main section div {
+  margin: 30px;
+  padding: 10px;
+}
+.info__main section div p {
+  color: #FFFFFF;
+  font-size: 20px;
+}
+
+.t-4 h2 {
+  display: flex;
+  justify-content: center;
+  padding-block: 20px;
+  color: #FFFFFF;
+  font-size: 30px;
+}
+.t-4 p a {
+  color: rgb(183, 183, 183);
+  font-weight: 600;
+}
+.t-4 p a:hover {
+  text-decoration: underline;
+}
+.t-4 span {
+  color: #FFFFFF;
+  font-size: 20px;
+}
+.t-4 span:hover {
+  transform: scale(1.2);
+}
+.t-4 span a {
+  padding-left: 20px;
+  color: rgb(138, 138, 138);
+}
+.t-4 span a:hover {
+  text-decoration: underline;
+  font-weight: 600;
+}
+
+.foto-info {
+  width: auto;
+  border-radius: 5px;
+}
+
+@media (max-width: 800px) {
+  .info__main section {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+  .info__main section div {
+    width: 60%;
+  }
+  .t-4 h2 {
+    font-size: 20px;
+  }
+}
+@media (max-width: 450px) {
+  .info__main section div p {
+    font-size: 1rem;
+  }
+  .t-4 h2 {
+    margin: 0;
+    font-size: 16px;
   }
 }/*# sourceMappingURL=main.css.map */
